Fix margins on mobile sizes.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -308,8 +308,12 @@ ul.logos li.arr {
 .prev-next-links.top {
 	border-bottom: #DDD solid 1px;
 	padding-bottom: 10px;
-	margin-top: -30px !important;
 	margin-bottom: 20px;
+}
+@media (min-width: 980px) {
+	.prev-next-links.top {
+		margin-top: -30px !important;
+	}
 }
 .prev-next-links.bottom {
 	border-top: #DDD solid 1px;
